--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,16 @@
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
   <!-- Plugins-->
-  <link href="http://associacaoclean.com.br/WebSitios/assets/css/plugins.min.css" rel="stylesheet">
-
-
-  <script src="http://associacaoclean.com.br/WebSitios/assets/js/custom/jquery-3.2.1.min.js"></script>
-  <script src="http://associacaoclean.com.br/WebSitios/assets/js/custom/popper.min.js"></script>
-  <script src="http://associacaoclean.com.br/WebSitios/assets/js/bootstrap/bootstrap.min.js"></script>
-  <script src="http://associacaoclean.com.br/WebSitios/assets/js/custom/plugins.min.js"></script>
-  <script src="http://associacaoclean.com.br/WebSitios/assets/js/custom/custom.min.js"></script>
+  <link href="http://associacaoclean.com.br/WebSitios/assets/css/plugins.min.css" rel="stylesheet">  
 
   <!-- Template core CSS-->
   <link href="http://associacaoclean.com.br/WebSitios/assets/css/template.css" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700&amp;amp;subset=cyrillic"
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700&subset=cyrillic"
     rel="stylesheet">
-
-  <script type="text/javascript"
-    src="https://cdn.syndication.twimg.com/widgets/timelines/345170787868762112?&amp;lang=en&amp;callback=__twttrf.callback&amp;suppress_response_codes=true&amp;rnd=0.7518635986392956">
-
+ 
   </script>
   <style id="fit-vids-style">
     .fluid-width-video-wrapper {
@@ -66,15 +56,22 @@
     }
 
   </style>
-  <script type="text/javascript" charset="UTF-8"
-    src="http://maps.googleapis.com/maps-api-v3/api/js/37/10a/intl/pt_br/common.js"></script>
-  <script type="text/javascript" charset="UTF-8"
-    src="http://maps.googleapis.com/maps-api-v3/api/js/37/10a/intl/pt_br/util.js"></script>
-
+ 
 </head>
 
 <body>
   <app-root></app-root>
+  <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/custom/popper.min.js"></script>
+  <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="assets/js/custom/plugins.min.js"></script>
+  <script src="assets/js/custom/custom.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
+  <script type="text/javascript" charset="UTF-8"
+  src="http://maps.googleapis.com/maps-api-v3/api/js/37/10a/intl/pt_br/common.js"></script>
+<script type="text/javascript" charset="UTF-8"
+  src="http://maps.googleapis.com/maps-api-v3/api/js/37/10a/intl/pt_br/util.js"></script>
+
 </body>
 
 </html>
