--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
   <!-- Plugins-->
-  <link href="http://associacaoclean.com.br/WebSitios/assets/css/plugins.min.css" rel="stylesheet">
+  <link href="assets/css/plugins.min.css" rel="stylesheet">
 
   <!-- Template core CSS-->
-  <link href="http://associacaoclean.com.br/WebSitios/assets/css/template.css" rel="stylesheet">
+  <link href="assets/css/template.css" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -52,6 +52,16 @@
     #jarallax-container-0 {
       clip: rect(0 1903px 300px 0);
       clip: rect(0, 1903px, 300px, 0);
+    }
+
+    #jarallax-container-0 {
+      clip: rect(0 1903px 300px 0);
+      clip: rect(0, 1903px, 300px, 0);
+    }
+
+    #jarallax-container-1 {
+      clip: rect(0 1903px 937px 0);
+      clip: rect(0, 1903px, 937px, 0);
     }
 
   </style>
